--- a/app.html
+++ b/app.html
@@ -35,3 +35,18 @@
     <router-view></router-view>
   </div>
 </template>
+
+<!DOCTYPE html>
+    <html>
+      <head>
+        <title>Aurelia</title>
+      </head>
+      <body aurelia-app="src/main">
+        <script src="scripts/system.js"></script>
+        <script src="scripts/config-typescript.js"></script>
+        <script src="scripts/aurelia-core.min.js"></script>
+        <script>
+          System.import('aurelia-bootstrapper');
+        </script>
+      </body>
+    </html>
