--- a/app.html
+++ b/app.html
@@ -50,3 +50,15 @@
         </script>
       </body>
     </html>
+
+<template>
+  <require from="bootstrap/css/bootstrap.css"></require>
+  <require from="font-awesome/css/font-awesome.css"></require>
+  <require from='nav-bar'></require>
+
+  <nav-bar router.bind="router"></nav-bar>
+
+  <div class="page-host">
+    <router-view></router-view>
+  </div>
+</template>
